[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/rexlia rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/SettingsHeader.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Icons/Keyboard&Mouse/Dark/Arrow_Right_Key_Dark.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Icons/Keyboard&Mouse/Dark/Arrow_Left_Key_Dark.png" type="Texture" id=4]

[sub_resource type="Theme" id=14]

[sub_resource type="DynamicFont" id=13]
size = 52
font_data = ExtResource( 1 )

[node name="SettingsHeader" type="HBoxContainer"]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 100.0
rect_min_size = Vector2( 1920, 100 )
custom_constants/separation = 180
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
highlight_color = Color( 0.498039, 0.894118, 0.388235, 1 )

[node name="ArrowLeft" type="Button" parent="."]
margin_left = 21.0
margin_right = 133.0
margin_bottom = 106.0
theme = SubResource( 14 )
icon = ExtResource( 4 )
flat = true

[node name="General" type="Label" parent="."]
margin_left = 313.0
margin_top = 21.0
margin_right = 540.0
margin_bottom = 85.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "General"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Label" parent="."]
margin_left = 720.0
margin_top = 21.0
margin_right = 892.0
margin_bottom = 85.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "Audio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Label" parent="."]
margin_left = 1072.0
margin_top = 21.0
margin_right = 1243.0
margin_bottom = 85.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "Video"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="Label" parent="."]
margin_left = 1423.0
margin_top = 21.0
margin_right = 1607.0
margin_bottom = 85.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "Inputs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowRight" type="Button" parent="."]
margin_left = 1787.0
margin_right = 1899.0
margin_bottom = 106.0
icon = ExtResource( 3 )
flat = true

[connection signal="pressed" from="ArrowLeft" to="." method="_on_ArrowLeft_pressed"]
[connection signal="pressed" from="ArrowRight" to="." method="_on_ArrowRight_pressed"]
